corrected badground on small screen scroll

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,6 +22,8 @@ html {
 
 	font-family: "Barlow Semi Condensed", sans-serif;
 	font-weight: 600;
+
+	background-color: hsl(237, 49%, 15%);
 }
 
 body {
